<resources>
    <string name="app_name">SpAnalyza</string>
    <string name="input_ean">Vlož EAN</string>
    <string name="book_name"> </string>
    <string name="book_ean"> </string>
    <string name="total_amount"> </string>
    <string name="sold_amount"></string>
    <string name="supplier_name"></string>
    <string name="order_amount">Objednat</string>
    <string name="return_amount">Vrátit</string>


    <string name="settingsButton">Nastavení</string>
    <string name="edit">Změny</string>
    <string name="exportButton">Odeslat</string>
    <string name="backButton">Zpět</string>
    <string name="saveButton">Uložit</string>
    <string name="developedBy">(c) 2018, Michal Trojek</string>


    <string name="version">Verze: 28</string>


    <string name="importDataButton">Nahrát</string>
    <string name="editIpAddressButton">Změnit IP Adresu</string>
    <string name="inputIpAddressHint">Vlož IP Adresu</string>
    <string name="cancelButton">Zpět</string>
    <string name="deleteButton">Vymazat</string>
    <string name="loadingAnalysis">Nahrávám analýzu...</string>
    <string name="loadingAnalyisisTitle">Nahrávání analýzy</string>


    <string name="printReturns">Vytisknout vratky</string>
    <string name="printOrders">Vytisknout objednavky</string>

    <string name="deleteOrders">Vymazat objednávky</string>
    <string name="deleteReturns">Vymazat vratky</string>
    <string name="ordersAmount">Objednávka: </string>
    <string name="returnsAmount">Vratka: </string>
    <string name="deleteAll">Vymazat všechna data</string>
    <string name="deleteDialogBackButton">Zpět</string>

    <string name="findByNameButton">Hledat podle názvu</string>
    <string name="serachByNameHint">Vlož název</string>

    <string name="start_downloading">Stahování databáze</string>
    <string name="start_downloading_text">Probíhá stahování databáze...</string>

    <string name="scanner_button">Snímat</string>

    <string name="offlineButton">Nahrát z interní paměti</string>
    <string name="onlineButton">Nahrát přes wifi</string>

    <string name="saveDataTitle">Ukladání dat</string>
    <string name="saveDataText">Ukládam data..</string>


    <string name="exportOnlineButton">Odeslat data přes wifi</string>
    <string name="exportOfflineButton">Uložit do interní paměti</string>
    <string name="exportInfoPrintButton">Vytisknout</string>

</resources>
