<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/deleteReturnsButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF0000"
        android:text="@string/deleteReturns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteOrdersButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF0000"
        android:text="@string/deleteOrders"
        app:layout_constraintStart_toStartOf="@+id/deleteReturnsButton"
        app:layout_constraintTop_toBottomOf="@+id/deleteReturnsButton" />

    <Button
        android:id="@+id/backDeleteButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/deleteDialogBackButton"
        app:layout_constraintEnd_toEndOf="@+id/deleteAllButton"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/deleteAllButton"
        app:layout_constraintTop_toBottomOf="@+id/deleteAllButton" />

    <Button
        android:id="@+id/deleteAllButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF0000"
        android:text="@string/deleteAll"
        app:layout_constraintStart_toStartOf="@+id/deleteOrdersButton"
        app:layout_constraintTop_toBottomOf="@+id/deleteOrdersButton" />

</android.support.constraint.ConstraintLayout>