<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/printReturnsButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/printReturns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backPrintButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/deleteDialogBackButton"
        app:layout_constraintEnd_toEndOf="@+id/printOrdersButton"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/printOrdersButton"
        app:layout_constraintTop_toBottomOf="@+id/printOrdersButton" />

    <Button
        android:id="@+id/printOrdersButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/printOrders"
        app:layout_constraintStart_toStartOf="@+id/printReturnsButton"
        app:layout_constraintTop_toBottomOf="@+id/printReturnsButton" />

</android.support.constraint.ConstraintLayout>